# movie_data_llm

./: explore.ipynb  hello.py  movies.csv  pyproject.toml  temp.csv
