[project]
name = "datacreation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "service>=0.6.0",
    "sqlalchemy>=2.0.39",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
